<?xml version="1.0"?>
<package format="2">
  <name>qm_compliant</name>
  <version>1.0.0</version>
  <description>The qm compliance control package</description>
  <maintainer email="skywoodszcn@gmail.com">skywoodsz</maintainer>
  <license>BSD3</license>
  <author email="skywoodszcn@gmail.com">skywoodsz</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_clang_tools</build_depend>
  <depend>roscpp</depend>
  <depend>ocs2_legged_robot</depend>
</package>
