<?xml version="1.0"?>
<package format="2">
  <name>qm_msgs</name>
  <version>1.0.0</version>
  <description>The qm message definitions</description>

  <maintainer email="skywoodszcn@gmail.com">skywoodsz</maintainer>
  <license>BSD3</license>
  <author email="skywoodszcn@gmail.com">skywoodsz</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <depend>std_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

</package>
